@@ -19,6 +19,7 @@ Version 1.4.7 - CVS
   - Added workaround for broken OpenBSD 3.8+ setlocale() function (#1427512).
   - Fixed session lockups on large attachment downloads.
   - Fixed bug_report plugin connections to mapped and secured IMAP servers.
+  - Fixed possibility to use single quote in provider name (#1475744).
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
